# Lelegram

./: .gitattributes  .gitignore  README.md  build.gradle  crowdin.yml  gradle.properties  settings.gradle
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: release.yml
TMessagesProj/: build.gradle  google-services.json  proguard-rules.pro
TMessagesProj/jni/: CMakeLists.txt  gifvideo.cpp
TMessagesProj/jni/colorado/: CMakeLists.txt  colorado.cpp  colorado.h
TMessagesProj/jni/tgnet/: ConnectionsManager.cpp
TMessagesProj/src/debug/res/values/: strings_lele.xml
TMessagesProj/src/main/: AndroidManifest.xml
TMessagesProj/src/main/res/values-af/: strings_lele.xml
TMessagesProj/src/main/res/values-ar/: strings_lele.xml
TMessagesProj/src/main/res/values-b+zh+Dg/: strings_lele.xml
TMessagesProj/src/main/res/values-be/: strings_lele.xml
TMessagesProj/src/main/res/values-ca/: strings_lele.xml
TMessagesProj/src/main/res/values-cs/: strings_lele.xml
TMessagesProj/src/main/res/values-da/: strings_lele.xml
TMessagesProj/src/main/res/values-de/: strings_lele.xml
TMessagesProj/src/main/res/values-el/: strings_lele.xml
TMessagesProj/src/main/res/values-eo/: strings_lele.xml
TMessagesProj/src/main/res/values-es/: strings_lele.xml
TMessagesProj/src/main/res/values-fa/: strings_lele.xml
TMessagesProj/src/main/res/values-fi/: strings_lele.xml
TMessagesProj/src/main/res/values-fr/: strings_lele.xml
TMessagesProj/src/main/res/values-he/: strings_lele.xml
TMessagesProj_App/: build.gradle  google-services.json
(+267 files in other folders)
